tests/baselines/reference/objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.errors.txt
tests/cases/conformance/types/members/objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.ts(8,1): error TS2322: Type 'Object' is not assignable to type 'I'.
  Type 'Object' provides no match for the signature '(): void'
tests/cases/conformance/types/members/objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.ts(14,1): error TS2322: Type 'Object' is not assignable to type '() => void'.
  Type 'Object' provides no match for the signature '(): void'


==== tests/cases/conformance/types/members/objectTypeWithCallSignatureHidingMembersOfFunctionAssignmentCompat.ts (2 errors) ====
    interface I {
        (): void;
    }
    
    var i: I;
    var f: Object;
    f = i;
    i = f;
    ~
!!! error TS2322: Type 'Object' is not assignable to type 'I'.
!!! error TS2322:   Type 'Object' provides no match for the signature '(): void'
    
    var a: {
        (): void
    }
    f = a;
    a = f;
    ~
!!! error TS2322: Type 'Object' is not assignable to type '() => void'.
!!! error TS2322:   Type 'Object' provides no match for the signature '(): void'